# Hoschoc-odoo

./: .gitmodules  Dockerfile  README.md  check-db-status.py  docker-compose.yml  entrypoint.sh  odoo-general.conf  odoo.conf  odoo_general.conf  pyproject.toml
docs/: odoo-restart-with-temporary-docker-compose-override.md
misc/: create-odoo-db.py  odoo_restart.sh  websocket-test.py
utils/: create-odoo-db.py
