[tool.poetry]
name = "odooBundle-Codebase"
version = "0.1.1"
description = "A project for managing Odoo and custom modules at Hoschoc Enterprise."
authors = ["Andrew Shen <wildfootw@hoschoc.com>"]
license = "LGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyPDF2 = "^3.0.0"
babel = "^2.9.1"
chardet = "^4.0.0"
python-dateutil = "^2.8.1"
decorator = "^5.0.9"
docutils = "^0.17"
freezegun = "^1.1.0"
geoip2 = "^4.4.2"
Pillow = "^9.0.0"
Jinja2 = "^2.11.3"
libsass = "^0.20.1"
lxml = "^4.6.3"
num2words = "^0.5.10"
ofxparse = "^0.19"
passlib = "^1.7.4"
polib = "^1.1.0"
psutil = "^5.8.0"
psycopg2 = "^2.9.9"
pydot = "^1.4.2"
pyopenssl = "^20.0.1"
rjsmin = "^1.1.0"
qrcode = "^6.1"
reportlab = "^4.2.2"
requests = "^2.25.1"
python-stdnum = "^1.16"
pytz = "^2021.1"
vobject = "^0.9.6.1"
Werkzeug = "^2.0.1"
xlsxwriter = "^1.4.3"
xlrd = "^2.0.1"
zeep = "^4.0.0"
markupsafe = "2.0.1"
cryptography = "3.3.2"
gevent = "21.8.0"
greenlet = "1.1.2"
idna = "3.3"
pyserial = "3.5"
urllib3 = "1.26.5"
pyusb = "1.2.1"
xlwt = "1.3.0"
python-ldap = "3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
